exports[`test component renders as before with 1 player 1`] = `
<div
  className="App">
  <p
    className="game-code" />
  <p
    className="number-of-players">
    1 players joined so far
  </p>
  <Connect(Component)
    action={
      Object {
        "type": "BEGIN_GAME",
      }
    }
    className="begin-button"
    res="Begin Game" />
</div>
`;

exports[`test component renders as before with 2 players 1`] = `
<div
  className="App">
  <p
    className="game-code" />
  <p
    className="number-of-players">
    2 players joined so far
  </p>
  <Connect(Component)
    action={
      Object {
        "type": "BEGIN_GAME",
      }
    }
    className="begin-button"
    res="Begin Game" />
</div>
`;

exports[`test component renders as before with no players 1`] = `
<div
  className="App">
  <p
    className="game-code" />
  <p
    className="number-of-players">
    0 players joined so far
  </p>
  <Connect(Component)
    action={
      Object {
        "type": "BEGIN_GAME",
      }
    }
    className="begin-button"
    res="Begin Game" />
</div>
`;
